src/test/deca/context/invalid/test_pass_3_no_bloc_main.deca
// Description:
//    Program testing no bloc main
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025


